Skip to content

audioscrobbler can't recognize server protocol due to bad url parsing

I recently installed release 3.0.0-rc4 (debian testing) and found out that the scrobbler doesn't work anymore.

Here is the error message:

[00005611c8529620] audioscrobbler interface error: Handshake: can't recognize server protocol

I investigated a bit, and I found that the bug occurs line 611 of https://github.com/videolan/vlc/blob/master/modules/misc/audioscrobbler.c Basically, vlc_UrlParse fails.

The url in question is "http://post.audioscrobbler.com:80/np_1.2" but due to the line "p_buffer_pos += 7;" a few line above, the http:// is deleted from the url and vlc_UrlParse cannot parse it correctly anymore.

(this happens twice in the code of the function)

I've changed the code by exchanging the line "p_buffer_pos += 7" with the next line (I exchanged lines 606 and 607, and lines 625 and 626) and it seems this corrects the bug (I tested against the git version from January 2nd)

E.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information