audioscrobbler: fix url parsing in handshake

vlc_UrlParse expects the scheme to be present

  fixes: #19415 #19916

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>